# image_processing_ITS

./: CMakeLists.txt  LinearRegression.py  Readme_cmakelists.txt  Untitled.ipynb  get_pixel_coordinates.py  vehicle_labeler.cpp
